# masque

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: ellip_grating.py  nested_poly_test.py  pcgen.py  phc.py  pic2mask.py  test_rep.py
examples/tutorial/: README.md  basic.py  basic_shapes.py  devices.py  library.py  pather.py  pcgen.py  phc.py  renderpather.py
masque/: VERSION.py  __init__.py  abstract.py  error.py  label.py  library.py  pattern.py  ports.py  ref.py  repetition.py  subpattern.py  utils.py
masque/builder/: __init__.py  abstract.py  builder.py  device_library.py  devices.py  flatbuilder.py  pather.py  pather_mixin.py  port_utils.py  renderpather.py  tools.py  utils.py
masque/file/: __init__.py  dxf.py  gdsii.py  gdsii_arrow.py  klamath.py  oasis.py  python_gdsii.py  svg.py  utils.py
masque/shapes/: __init__.py  arc.py  circle.py  ellipse.py  path.py  poly_collection.py  polygon.py  shape.py  text.py
masque/traits/: __init__.py  annotatable.py  copyable.py  doseable.py  layerable.py  lockable.py  mirrorable.py  positionable.py  repeatable.py  rotatable.py  scalable.py
masque/utils/: __init__.py  array.py  autoslots.py  bitwise.py  comparisons.py  curves.py  decorators.py  deferreddict.py  pack2d.py  ports2data.py  transform.py  types.py  vertices.py
